# SakuraEngine-Old

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  GPATH  GRTAGS  GTAGS  LICENSE  Modules.generated.h.h  README.en-US.md  README.md  SPAmeta.h  SakuraEngineConfig.cmake.in  imgui.ini  xmake.lua
DependencyGraph/: CMakeLists.txt  Graph.h
DependencyGraph/DAGUnitTests/: CMakeLists.txt  UnitTestDependencyGraph.cpp  UnitTestDependencyGraph.h
SPA/: CMakeLists.txt  ModuleCollector.py  README.md  SPAModules.generated.h  anyToheader.py  jsonToheader.py  xmake.lua
SPA/SPAUnitTest/: CMakeLists.txt  UnitTestSPA.cpp  meta.h  meta.json
SPA/SPAUnitTest/plugin_0/: meta.h  meta.json
SPA/SPAUnitTest/plugin_1/: meta.h  meta.json
SPA/SPAUnitTest/plugin_main/: meta.h
SPA/include/: confinfo.h  imodule.h  moduleininfo.h  modulemanager.h  plugininfo.h  sharedlibrary.h
SPA/src/: modulemanager.cpp
SPAUnitTest/: CMakeLists.txt  SPAModules.generated.h  UnitTestSPA.cpp  xmake.lua
SPAUnitTest/plugin_0/: CMakeLists.txt  meta.h  meta.json  plugin_0.cpp  plugin_0.h  xmake.lua
SPAUnitTest/plugin_1/: CMakeLists.txt  meta.h  meta.json  plugin_1.cpp  plugin_1.h  xmake.lua
SPAUnitTest/plugin_main/: CMakeLists.txt  mainmeta.json  meta.h  plugin_main.cpp  plugin_main.h  xmake.lua
SakuraEngine/: .gitignore  CMakeLists.txt  CMakeSettings.json  SPAModules.generated.h  xmake.lua
SakuraEngine/.xmake/windows/x64/: xmake.conf
SakuraEngine/Applications/: ApplicationModule.cpp  ApplicationModule.h  CMakeLists.txt  meta.h  meta.json
SakuraEngine/Applications/Linux/: CMakeLists.txt  LinuxEngine.cc  LinuxEngine.cpp  LinuxEngine.h  LinuxWindow.cc  LinuxWindow.h
SakuraEngine/Applications/Win32/: CMakeLists.txt  Win32Engine.cpp  Win32Engine.h  Win32Window.cpp  Win32Window.h
SakuraEngine/Conan/: conan_imports_manifest.txt  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph_info.json
SakuraEngine/Core/: CMakeLists.txt  Core.cpp  Core.h  CoreModule.cpp  CoreModule.h  README.en-US.md  README.md  meta.h  meta.json  xmake.lua
SakuraEngine/Core/Containers/: Containers.cpp  Containers.h  SMap.h  SString.cpp  SString.h  SUnorderedMap.h  SVariant.h  SVector.h
SakuraEngine/Core/CoreMinimal/: CoreMinimal.h  SAssert.h  SCommand.h  SConcepts.h  SConcepts.hpp  SDebug.h  SDefination.h  SFlags.h  SInterface.h  SKeyWords.h  SLinuxDefination.h  SMacDefination.h  SUUID.h  SWinDefination.h  SakuraPlatformFlag.h
SakuraEngine/Core/EngineUtils/: CMakeLists.txt  ConsoleDesk.h  EngineUtil_All.cpp  EngineUtils.h  SHash.h  T2String.h  filesystem.h  fs.h  log.h  os.h  path.h  sstream.h  time.h  xmake.lua
SakuraEngine/Core/EngineUtils/Common/: T2String.cc  path.cc
SakuraEngine/Core/EngineUtils/Coroutine/: coro-task.hpp
SakuraEngine/Core/EngineUtils/Unix/: fs.cc  os.cc  time.cc
SakuraEngine/Core/EngineUtils/Win32/: filesystem.cpp  fs.cpp  os.cpp  time.cpp
SakuraEngine/Core/Math/: CMakeLists.txt  Color.h  Math.h  SAlgorithm.hpp
SakuraEngine/Core/Math/GeoMath/: CMakeLists.txt  GeoMath.h  Half.h  Matrix.h  Transform.h  Vector.h
SakuraEngine/Editor/: CMakeLists.txt  EditorModule.cpp  EditorModule.h  RenderGraphTestApplication.hpp  VkTestApplication.hpp  mainmeta.json  meta.h
SakuraEngine/Editor/Linux/: CMakeLists.txt  LinuxEditor.cpp  LinuxEditor.h
SakuraEngine/Editor/Linux/Execute/: CMakeLists.txt  LinuxExecute.cpp
SakuraEngine/Editor/Win32/: CMakeLists.txt  Win32Editor.cpp  Win32Editor.h
SakuraEngine/Editor/Win32/Execute/: CMakeLists.txt  Win32Execute.cpp
SakuraEngine/Framework/: CMakeLists.txt
SakuraEngine/Framework/Application/: SApplication.h  SEngine.h  SWindow.h
SakuraEngine/GraphicsInterface/: CMakeLists.txt
SakuraEngine/GraphicsInterface/CGD/: CGD.cpp  CMakeLists.txt  CommandContext.cpp  GpuTimer.cpp  Profiling.cpp
SakuraEngine/GraphicsInterface/CGD_Direct3D12/: CGD_Direct3D12.cpp  CGD_Direct3D12.h  CMakeLists.txt  CommandContext_Dx12.cpp
SakuraEngine/GraphicsInterface/CGD_Vulkan/: CGD_Vulkan.cpp  CGD_Vulkan.h  CMakeLists.txt  CommandContext_Vk.cpp  CommandContext_Vk.h  Vulkan_FormatTransfer.h
SakuraEngine/GraphicsInterface/GraphicsCommon/: CGD.h  CMakeLists.txt  CommandContext.h  GpuTimer.h
SakuraEngine/GraphicsInterface/GraphicsCommon/CommandObjects/: CommandContext.h
SakuraEngine/GraphicsInterface/GraphicsCommon/Format/: PixelFormat.h
SakuraEngine/Modules/: CMakeLists.txt
SakuraEngine/Modules/GraphicsInterface/: CGDModule.cpp  CGDModule.h  CMakeLists.txt  meta.h  meta.json
SakuraEngine/Modules/GraphicsInterface/CGD/: CGD.cpp  CGDExport.h  CMakeLists.txt  CommandContext.cpp  GpuTimer.cpp  Profiling.cpp
SakuraEngine/Modules/GraphicsInterface/CGD_Direct3D12/: CGD_Direct3D12.cpp  CGD_Direct3D12.h  (+2 more)
SakuraEngine/StaticBuilds/: CMakeLists.txt  xmake.lua
SakuraEngine/StaticBuilds/GraphicsInterface/: CGDModule.h  CMakeLists.txt  xmake.lua
SakuraEngine/StaticBuilds/ImGuiProfiler/: CMakeLists.txt  ImGuiProfiler.hpp  ImGuiVulkanSDL.cpp  ImGuiVulkanSDL.h
SakuraEngine/StaticBuilds/PixelOperators/: DigitalImageProcess.h  ImageUtils.h
SakuraEngine/StaticBuilds/RenderGraph/: CMakeLists.txt  GraphPassNode.cpp  GraphPassNode.h  GraphResourceNode.cpp  GraphResourceNode.h  RenderGraph.cpp  RenderGraph.h  RenderGraph_All.cpp
SakuraEngine/StaticBuilds/SakuraScene/: CMakeLists.txt
SakuraEngine/StaticBuilds/SakuraWorld/: CMakeLists.txt  SakuraWorld.cpp
SakuraEngine/StaticBuilds/TaskSystem/: CMakeLists.txt  TaskSystem.cpp  TaskSystem.h
SakuraEngine/UnitTests/: .gitignore  CMakeLists.txt
SakuraEngine/UnitTests/UnitTestApplication/: CMakeLists.txt  UnitTestApplication.cpp  UnitTestWinApp.cpp
SakuraEngine/UnitTests/UnitTestCore/: CMakeLists.txt  UnitTestCore.cpp  UnitTestCoreUtils.cpp
SakuraEngine/UnitTests/UnitTestGraphics/: CMakeLists.txt  SDLHello.cpp  UnitTestGraphics.cpp  VkTestApplication.h  VkTestApplication.hpp  VkTriangle.cpp  he.cpp  vkImHW.cpp
SakuraEngine/UnitTests/coro/: CMakeLists.txt  UnitTestCoro.cpp
SakuraEngine/cmake/: TargetArchDetect.cmake
SakuraParser/: CMakeLists.txt  SakuraParser.cpp  Test.cpp  double.hpp
(+410 files in other folders)
