if(WIN32)
set(TARGET_APP_LIB "Win32App")
message(STATUS "Generating UnitTestWinApp.exe")
add_executable(UnitTestWinApp UnitTestWinApp.cpp)
target_link_libraries(UnitTestWinApp Core user32 ${TARGET_APP_LIB})
else(LINUX)
set(TARGET_APP_LIB "LinuxApp")
message(STATUS "Generating UnitTestApplication.exe")
add_executable(UnitTestApplication UnitTestApplication.cpp)
target_link_libraries(UnitTestApplication gtest gtest_main Core ${TARGET_APP_LIB})
endif(WIN32)

